--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
-<p>Hello 大家好</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>博客列表</title>
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/blog_list.css">
+</head>
+<body>
+    <!-- 导航栏 -->
+    <div class="nav">
+        <img src="img/风景.jpeg" alt="">
+        <span>我的博客系统</span>
+        <!-- 空白元素 实现占位 -->
+        <div class="spacer"></div>
+        <a href="blog_list.html">主页</a>
+        <a href="blog_edit.html">写博客</a>
+        <a href="#">注销</a>
+    </div>
+    <!-- 这里的.container作为页面的版心 -->
+    <div class="container">
+        <!-- 左侧个人信息 -->
+        <div class="left">
+            <!-- 表示整个用户的信息区域 -->
+            <div class="card">
+                <h3>老实人022</h3>
+                <a href="#">github地址</a>
+                <div class="counter">
+                    <span>文章</span>
+                    <span>分类</span>
+                </div>
+                <div class="counter">
+                    <span>2</span>
+                    <span>1</span>
+                </div>
+            </div>
+        </div>
+        <!-- 右侧内容详情 -->
+        <div class="right">
+            <!-- .blog就对应表示一个博客 -->
+            <div class="blog">
+                <!-- 博客标题 -->
+                <div class="title">
+                    我的第一篇作文
+                </div>
+                <!-- 博客发布时间 -->
+                <div class="date">
+                    2022-05-22 15:34:00
+                </div>
+                <!-- 博客的摘要 -->
+                <a href="#">查看全文 &gt;&gt;</a>
+            </div>
+            <div class="blog">
+                <!-- 博客标题 -->
+                <div class="title">
+                    我的第二篇作文
+                </div>
+                <!-- 客发布时间 -->
+                <div class="date">
+                    2022-05-22 15:34:00
+                </div>
+                <a href="#">查看全文 &gt;&gt;</a>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
+</html>
