--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- 导航栏 -->
     <div class="nav">
-        <img src="img/风景.jpeg" alt="">
+        <img src="01b7305e0edd3aa80121651847449b.jpg@2o.jpg" alt="">
         <span>我的博客系统</span>
         <!-- 空白元素 实现占位 -->
         <div class="spacer"></div>
